[package]
name = "create_table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.47.0"
lambda_http = "0.6.0"
http = "0.2.8"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["fmt"] }
serde = { version = "1.0.142", features = ["derive"] }
db = { path = "../db" }
intellidyn_error = { path = "../intellidyn_error" }

[[bin]]
name = "create_table"
path = "src/main.rs"