[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.47.0"
aws-sdk-dynamodb = "0.17.0"
tokio-stream = "0.1.9"
serde = { version = "1.0.142", features = ["derive"] }
serde_dynamo = { version = "4.0.5", features = ["aws-sdk-dynamodb+0_17"] }
intellidyn_error = { path = "../../lib/intellidyn_error" }